assets/css/style.css
html {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #444;
    background: white;
    font-size: 100%;
    line-height: 1.5;
    font-variant-ligatures: common-ligatures discretionary-ligatures;
    text-rendering: optimizeSpeed;
    font-variant-numeric: oldstyle-nums proportional-nums;
}

@media screen and (min-width: 960px) {
    html {
        font-size: 110%;
    }
    }

@media screen and (min-width: 1200px) {
html {
    font-size: 125%;
}
}

body {
margin: 0;
padding: 0;
}

header, footer {
    background-image: linear-gradient( 135deg, hsl(150, 100%, 90%) 0%, hsl(270, 100%, 90%) 100%);
}

a {
    color: #444;
}

header {
    display: flex;
    justify-content: space-between;
    column-gap: 1rem;
    flex-wrap: wrap;
    padding: 2rem;
    font-size: .9rem;
}

nav { 
    display: flex;
    column-gap: 1rem;
    flex-wrap: wrap;
}

main {
    max-width: 35em;
    margin: auto;
    padding: 2rem;
    min-height: 400px;
}

footer {
    text-align: center;
   padding: 2rem;
   font-size: .9rem;
}

h1, h2, h3, h4, h5, h6 {
    font-variant-numeric: normal;
}

h1 {
    font-size: 2rem;
}

ul, li {
    list-style-type: square;
}

code, pre {
    font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
}

pre {    
    border: 2px solid #ddd;
    padding: 1rem;
    border-radius: 1rem;
    overflow: auto;
}

table {
    font-variant-numeric: tabular-nums;
}

.meta {
    margin-top: 3rem;
    font-size: 90%;
}

